# roche

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml  python-release.yml  release.yml
benchmarks/: bench.py
crates/roche-cli/: Cargo.toml  build.rs
crates/roche-cli/proto/roche/v1/: sandbox.proto
crates/roche-cli/src/: main.rs
crates/roche-core/: Cargo.toml
crates/roche-core/examples/: bench_wasm.rs
crates/roche-core/src/: capability.rs  intent.rs  lib.rs  session.rs  types.rs
crates/roche-core/src/provider/: capabilities.rs  docker.rs  e2b.rs  k8s.rs  mod.rs
crates/roche-core/src/provider/firecracker/: api_client.rs  mod.rs  state.rs  vsock_exec.rs
crates/roche-core/src/provider/wasm/: engine.rs  mod.rs  sandbox_state.rs
crates/roche-core/src/sensor/: docker.rs  mod.rs  types.rs
crates/roche-core/tests/: docker_integration.rs  docker_trace_test.rs  trace_integration.rs  trace_types_test.rs
crates/roche-daemon/: Cargo.toml  build.rs
crates/roche-daemon/proto/roche/v1/: sandbox.proto
crates/roche-daemon/src/: gc.rs  idempotency.rs  main.rs  retry.rs  seccomp-trace.json  server.rs
crates/roche-daemon/src/pool/: config.rs  mod.rs  reaper.rs  replenish.rs
docs/: ARCHITECTURE.md  DESIGN.md  PRD.md  api-reference.md
docs/superpowers/plans/: 2026-03-13-mvp-implementation.md  2026-03-13-phase-a-mvp-completion.md  2026-03-13-phase-b-daemon-grpc.md  2026-03-13-phase-b-enhanced-docker.md  2026-03-13-phase-b-firecracker.md  2026-03-14-phase-3a-sandbox-pooling.md  2026-03-14-phase-d-sdk.md  2026-03-15-go-sdk.md  2026-03-15-k8s-provider.md  2026-03-18-daemon-auto-management.md  2026-03-18-execution-trace.md  2026-03-18-ts-sdk-trace.md
docs/superpowers/specs/: 2026-03-13-phase-a-mvp-completion-design.md  2026-03-13-phase-b-daemon-grpc-design.md  2026-03-13-phase-b-enhanced-docker-design.md  2026-03-13-phase-b-firecracker-design.md  2026-03-14-k8s-provider-design.md  2026-03-14-phase-d-sdk-design.md  2026-03-14-phase-e-ci-proto-codegen-design.md  2026-03-14-phase-e-integration-tests-design.md  2026-03-14-phase-e-publish-config-design.md  2026-03-14-phase-e-wasm-provider-design.md  2026-03-15-go-sdk-design.md  2026-03-18-daemon-auto-management-design.md  2026-03-18-execution-trace-design.md  2026-03-18-ts-sdk-trace-design.md
examples/: README.md
examples/code-evaluator/: README.md  server.py  test_cases.py
examples/data-pipeline/: README.md  runner.py
examples/data-pipeline/sample_scripts/: analyze.py  transform.py
examples/github-tester/: README.md  tester.py
examples/llm-code-interpreter/: README.md  comparison.py  interpreter.py
examples/python/: async_context_manager.py  basic.py
examples/python/anthropic/: basic_tool.py  code_assistant.py  requirements.txt
examples/python/autogen/: basic_executor.py  group_chat.py  requirements.txt
examples/python/camel/: basic_tool.py  coding_agent.py  requirements.txt
examples/python/crewai/: basic_task.py  requirements.txt  research_crew.py
examples/python/langchain/: basic_tool.py  code_agent.py  requirements.txt
examples/python/openai-agents/: basic_tool.py  code_interpreter.py  requirements.txt
examples/typescript/: basic.ts
proto/roche/v1/: sandbox.proto
sdk/go/: README.md  daemon.go  daemon_test.go  defaults.go  defaults_test.go  errors.go  errors_test.go  gen.go  go.mod  parallel.go  roche.go  roche_test.go  run.go  run_test.go  sandbox.go  sandbox_test.go  snapshot.go  trace.go  transport.go  transport_cli.go  transport_cli_test.go  transport_grpc.go  transport_grpc_test.go  types.go  types_test.go
sdk/go/scripts/: proto-gen.sh
sdk/python/: .gitignore  README.md  hatch_build.py  pyproject.toml
sdk/python/roche/: __init__.py  client.py  errors.py  types.py
sdk/python/scripts/: proto-gen.sh
sdk/python/src/roche_sandbox/: __init__.py  _cli_install.py  client.py  daemon.py  decorator.py  errors.py  intent.py  run.py  sandbox.py  trace.py  types.py  wallet.py
sdk/python/src/roche_sandbox/castor/: __init__.py  _bridge.py  _intent_gate.py  _signals.py  _stream_monitor.py  _tools.py  _types.py  _violations.py  _workspace.py
sdk/python/src/roche_sandbox/transport/: __init__.py  cli.py  grpc.py
sdk/python/tests/: test_auto_spawn.py  test_client.py  test_daemon.py  test_decorator.py  test_errors.py  test_intent.py  test_parallel.py  test_run.py  test_sandbox.py  test_snapshot.py  test_trace.py  test_types.py
sdk/python/tests/integration/: conftest.py  test_cli_e2e.py
sdk/python/tests/transport/: test_cli.py  test_grpc.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/scripts/: proto-gen.sh
sdk/typescript/src/: daemon.ts  errors.ts  index.ts  roche.ts  run.ts  sandbox.ts  trace.ts  types.ts
sdk/typescript/src/transport/: cli.ts  grpc.ts  index.ts
sdk/typescript/test/: daemon.test.ts  errors.test.ts  roche.test.ts  run.test.ts  sandbox.test.ts  trace.test.ts  types.test.ts
sdk/typescript/test/integration/: cli-e2e.test.ts
sdk/typescript/test/transport/: cli.test.ts  grpc.test.ts
