[package]
name = "roche-cli"
description = "Universal sandbox orchestrator for AI agents — CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "roche"
path = "src/main.rs"

[dependencies]
roche-core = { path = "../roche-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
