[package]
name = "roche-core"
description = "Universal sandbox orchestrator for AI agents — core library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "time", "io-util"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http1"] }
http-body-util = "0.1"
uuid = { version = "1", features = ["v4"] }
nix = { version = "0.29", features = ["signal", "process"] }
dirs = "6"
wasmtime = { version = "29", optional = true }
wasmtime-wasi = { version = "29", optional = true }

[features]
wasmtime = ["dep:wasmtime", "dep:wasmtime-wasi"]

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = "0.6"

[dev-dependencies]
tempfile = "3"
