[package]
name = "roche-core"
description = "Universal sandbox orchestrator for AI agents — core library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "time", "io-util", "fs"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http1"] }
http-body-util = "0.1"
uuid = { version = "1", features = ["v4"] }
nix = { version = "0.29", features = ["signal", "process"] }
dirs = "6"
wasmtime = { version = "29", optional = true }
wasmtime-wasi = { version = "29", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"], optional = true }
base64 = { version = "0.22", optional = true }
kube = { version = "0.98", features = ["client", "runtime", "ws"], optional = true }
k8s-openapi = { version = "0.24", features = ["v1_32"], optional = true }
tar = { version = "0.4", optional = true }
toml = { version = "0.8", optional = true }
tracing = { version = "0.1", optional = true }

[features]
wasmtime = ["dep:wasmtime", "dep:wasmtime-wasi"]
e2b = ["dep:reqwest", "dep:base64"]
k8s = ["dep:kube", "dep:k8s-openapi", "dep:tar", "dep:toml", "dep:tracing"]

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = "0.6"

[dev-dependencies]
tempfile = "3"
