[package]
name = "roche-daemon"
description = "Universal sandbox orchestrator for AI agents — gRPC daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "roche-daemon"
path = "src/main.rs"

[dependencies]
roche-core = { path = "../roche-core", features = ["wasmtime"] }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.12"
