[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roche-sandbox"
version = "0.1.0"
description = "Universal sandbox orchestrator for AI agents — Python SDK"
license = "Apache-2.0"
requires-python = ">=3.10"
readme = "README.md"
keywords = ["sandbox", "docker", "ai", "agent", "wasm", "orchestrator"]
authors = [{name = "Substratum Labs"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Emulators",
]
dependencies = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/roche_sandbox"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "grpcio-tools>=1.60.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/substratum-labs/roche"
Repository = "https://github.com/substratum-labs/roche"
